prototypes/p2c/tests/invalid/05_fails_not_handled.hll
// MUST BE REJECTED: error from fails not handled by caller

struct InvalidEmail { String input }

function parseEmail(String input) -> Email fails InvalidEmail {
    fail InvalidEmail(input)
}

function main() {
    let email = parseEmail("bad")  // ERROR: InvalidEmail not handled (no | handler)
    printLn(email)
}
